# piano-Rust

./: Cargo.toml  LICENSE  README.md  TODO.md
res/: notes.json
src/: consts.rs  lib.rs  main.rs
src/audio/: frequency_manager.rs  mod.rs  note_manager.rs  setup_realtime_audio.rs
src/consts/: constants.rs
src/gui/: app.rs  mod.rs
src/input/: key_handlers.rs  key_logic.rs  mod.rs
src/launcher/: app_launcher.rs
src/prints/: mod.rs  printfn.rs
src/synth/: manager.rs  mod.rs  traits.rs
src/synth/types/: fm.rs  hammond.rs  mod.rs  sawtooth.rs  sine.rs  square.rs
src/synths/: manager.rs  mod.rs  modular.rs  traits.rs
src/synths/modules/: adsr.rs  compressor.rs  delay.rs  filter.rs  gain.rs  lfo.rs  mod.rs  noise.rs  reverb.rs
src/synths/oscillators/: fm.rs  hammond.rs  mod.rs  sawtooth.rs  sine.rs  square.rs
src/synths/types/: fm.rs  hammond.rs  mod.rs  sawtooth.rs  sine.rs  square.rs
