[package]
name = "synthesizer_emulation"
version = "0.1.0"
edition = "2024"
default-run = "synthesizer_emulation"
authors = ["Romain Lief <votre.email@example.com>"]
license = "MIT"
description = "Un synthétiseur modulaire en Rust avec interface graphique"
repository = "https://github.com/romainlief/piano-Rust"
keywords = ["audio", "synthesizer", "music", "dsp"]
categories = ["multimedia::audio"]

[dependencies]
cpal = "0.16.0"
device_query = "4.0.1"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
eframe = "0.32.0"
egui = "0.32.0"
env_logger = "0.11.8"